# daemonfs

./: meson.build
src/: daemon.cpp  daemon.hpp  daemonfs.cpp  daemonfs.hpp  init.cpp  macros.hpp  main.cpp  message-buffer-test.cpp  message-buffer.cpp  message-buffer.hpp  signal.cpp  signal.hpp  time.cpp  time.hpp
test/: example1d.sh  example2d.sh  example3d.sh  run.sh
test/mnt/e1d/: args
test/mnt/e2d/: args
test/mnt/e3d/: args
